--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,12 +8,13 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Home</title>
+		<title>About</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
-		<h1>Astro</h1>
-		<h1>My Astro Site</h1>
+        <h1>About POP MART</h1>
+        <p>Pop Mart is a Chinese toy company listed on the Hong Kong stock exchange. 
+            The company is known for selling collectable 'designer' toys, often sold in a blind box format.</p>
 	</body>
 </html>
