--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,6 +13,7 @@
 	<body>
         <a href="/">Home</a>
         <a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
         <h1>About POP MART</h1>
         <p>Pop Mart is a Chinese toy company listed on the Hong Kong stock exchange. 
             The company is known for selling collectable 'designer' toys, often sold in a blind box format.</p>
