--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,6 @@ const { pageTitle } = Astro.props;
     <p>POP MART's products are known for their high quality, creativity, and limited editions, making them highly sought after by collectors. The company has expanded its product lines to include various themes and characters, appealing to a wide range of audiences.</p>
     <p>In addition to its physical stores, POP MART has a strong online presence and has expanded its reach internationally, making it a prominent player in the designer toy market.</p>
     <p>Overall, POP MART has become a significant name in the world of designer toys, attracting collectors and enthusiasts with its innovative designs and artistic collaborations.</p>
-    <p>For more information, you can visit the official website of <a href="https://www.popmart.com/" class="popmart-link">POP MART</a></p>
+    <p>For more information, you can visit the official website of <a href="https://www.popmart.com/" class="popmart-link">POP MART</a>.</p>
   </section>
 </BaseLayout>
