--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,10 +1,11 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
+import BlogPost from '../components/BlogPost.astro';
 const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
 const pageTitle = "Blog Posts";
 ---
 <BaseLayout pageTitle={pageTitle}>
-  <style>
+  <style is:global>
     .blog-section {
       animation: fadeIn 0.8s ease;
       background: #353535;
@@ -23,6 +24,15 @@ const pageTitle = "Blog Posts";
       margin-bottom: 0.75em;
       font-size: 1.1em;
       list-style: none;
+    }
+
+    .blog-section ul li::before {
+      content: "=>";
+      font-weight: bold;
+      display: inline-block;
+      width: 1em;
+      margin-left: -1em;
+      margin-right: 0.5em;
     }
     .blog-section a {
       color: inherit; 
@@ -48,7 +58,7 @@ const pageTitle = "Blog Posts";
   <section class="blog-section">
     <h2>Here are my posts:</h2>
     <ul>
-      {allPosts.map((post: any) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+      {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
     </ul>
   </section>
 </BaseLayout>
