--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -71,7 +71,12 @@
     padding: 1rem 0;         
     border-radius: 1.5rem;    
     box-shadow: 0 4px 16px rgba(0,0,0,0.1); 
-}
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
 
 .nav-links a {
     display: inline-block;    
@@ -94,10 +99,10 @@
     background-color: #2b2b2b;
     transform: translateY(-2px) scale(1.05);
 }
-
 @media screen and (min-width: 636px) {
     .nav-links {
-        display: block;
+        display: flex;
+        flex-direction: row;
         position: static;
         width: auto;
         background: none;
@@ -105,6 +110,9 @@
         padding: 0;
         border-radius: 0;
         text-align: center;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
     }
 
     .nav-links a {
@@ -116,4 +124,4 @@
     .hamburger {
         display: none;
     }
-}
+}   
